fix for http://stackoverflow.com/questions/10927481/moz-border-radius-removed-from-firefox-13

--- a/skin/vI_rdfTreeInfo.css
+++ b/skin/vI_rdfTreeInfo.css
@@ -46,7 +46,7 @@ td {
 
 table {
 	background-color: #eee;
-	-moz-border-radius: 10px;
+	border-radius: 10px;
 	font-size: small;
 	border-collapse: collapse;
 	margin: auto;
